# etvdb

./: CMakeLists.txt  Doxyfile.in  README.md
data/: languages.xml
lib/: CMakeLists.txt  aux.c  episodes.c  etvdb.c  etvdb.h  etvdb_private.h  infra.c  series.c
